<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>okvis</name>
  <version>0.0.0</version>
  <description>OKVIS ROS2</description>

  <maintainer email="stefan.leutenegger@tum.de">Stefan Leutenegger</maintainer>
  <author email="stefan.leutenegger@tum.de">Stefan Leutenegger</author>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>


  <build_depend>eigen</build_depend>
  <build_depend>ros_environment</build_depend>

  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>message_filters</depend>
  <depend>launch</depend>
  <depend>launch_testing</depend>
  <depend>launch_testing_ros</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
